# zxing-cpp

./: .gitignore  CMakeLists.txt  build_release_android.sh  zxing.cmake
core/src/: BinaryBitmap.cpp  GridSampler.cpp  GridSampler.h  MultiFormatReader.cpp  ReadBarcode.cpp  ReadBarcode.h  RegressionLine.h  Result.h
core/src/aztec/: AZReader.cpp
core/src/datamatrix/: DMDecoder.cpp  DMDetector.cpp  DMDetector.h  DMReader.cpp  DMReader.h  logger.h  logger.mm
core/src/qrcode/: QRReader.cpp
debug/: CMakeLists.txt  DebugReadbardcode.cpp  README.md
release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
release/core/: Makefile  ZXVersion.h  cmake_install.cmake  zxing.pc
release/example/: CTestTestfile.cmake  Makefile  ZXingReader  ZXingWriter  cmake_install.cmake
wrappers/ios/: Package.swift  build-release.sh
wrappers/ios/ZXing.xcframework/: Info.plist
wrappers/ios/ZXing.xcframework/ios-arm64/ZXing.framework/: Info.plist  ZXing
wrappers/ios/ZXing.xcframework/ios-arm64_x86_64-simulator/ZXing.framework/: Info.plist  ZXing
wrappers/ios/ZXingCpp.xcframework/ios-arm64/ZXing.framework/: Info.plist
wrappers/ios/ZXingCpp.xcframework/ios-arm64_x86_64-simulator/ZXing.framework/: Info.plist
wrappers/ios/_builds/: CMakeCache.txt  CTestTestfile.cmake  cmake_install.cmake
wrappers/ios/_builds/CMakeScripts/: ReRunCMake.make
wrappers/ios/_builds/ZXing.xcodeproj/: project.pbxproj
wrappers/ios/_builds/core/: cmake_install.cmake  zxing.pc
wrappers/python/: CMakeLists.txt
(+10 files in other folders)
